--- a/menu.html
+++ b/menu.html
@@ -71,13 +71,13 @@
                 <ul class="uni-list">
                     <li class="uni-item">
                         <a href="https://vnu.edu.vn/" target="_blank">
-                            <div class="uni-logo"><img src="Menuwebsite_files/VNU.jpg" alt="VNU"></div>
+                            <div class="uni-logo"><img src="https://cdnportal.vnu.edu.vn/data/0/images/2025/09/09/upload_2/logo-vnu-1995.jpg?dpi=150&quality=100&w=1920" alt="VNU"></div>
                             ĐHQG Hà Nội
                         </a>
                     </li>
                     <li class="uni-item">
                         <a href="https://vnuhcm.edu.vn/" target="_blank">
-                            <div class="uni-logo"><img src="Menuwebsite_files/VNU-HCM_logo.jpg" alt="VNU-HCM"></div>
+                            <div class="uni-logo"><img src="https://old.hcmus.edu.vn/images/2020/06/22/19.05.21---logo-don-02.png-chu-duoi-1.png" alt="VNU-HCM"></div>
                             ĐHQG TP.HCM
                         </a>
                     </li>
@@ -145,4 +145,5 @@
     </footer>
 
 </body>
+
 </html>
