--- a/members.html
+++ b/members.html
@@ -39,7 +39,7 @@
         <!-- Thành viên 2 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="D:\webduongdat\webduongdat\Thaovyavatar.jpg" class="avatar-img" alt="Thảo Vy">
+                <img src="Thaovyavatar.jpg" class="avatar-img" alt="Thảo Vy">
                 <p class="mascot-icon">🐑</p>
             </div>
             <div class="info-box">
@@ -91,4 +91,5 @@
     </footer>
 
 </body>
+
 </html>
