--- a/members.html
+++ b/members.html
@@ -39,7 +39,7 @@
         <!-- Thành viên 2 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="Thaovyavatar.jpg" class="avatar-img" alt="Thảo Vy">
+                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/Thaovyavatar.jpg?raw=true" class="avatar-img" alt="Thảo Vy">
                 <p class="mascot-icon">🐑</p>
             </div>
             <div class="info-box">
@@ -54,7 +54,7 @@
         <!-- Thành viên 3 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="D:\webduongdat\webduongdat\Tu Anh Avatar.jpg" class="avatar-img" alt="Tú Anh">
+                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/Tu%20Anh%20Avatar.jpg?raw=true" class="avatar-img" alt="Tú Anh">
                 <p class="mascot-icon">⭐</p>
             </div>
             <div class="info-box">
@@ -91,5 +91,4 @@
     </footer>
 
 </body>
-
 </html>
