--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -31,7 +31,10 @@
         <div class="hero-text">
             <h1>SÁNG TẠO THẾ GIỚI KHÔNG TƯỞNG</h1>
             <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực. Từ những vụ nổ hoành tráng đến những sinh vật kỳ bí, bạn chính là người kiến tạo nên những trải nghiệm thị giác đỉnh cao.</p>
-            <p><strong>👉 Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
+            <p><strong> Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
+            <video src="VFX breakdown of the multiverse video  MANJESH VFX Edits - MANJESH VFX EDITs (720p, h264).mp4" width="640" height="360" controls>
+  Trình duyệt của bạn không hỗ trợ thẻ video.
+</video>
         </div>
         <div class="hero-image">
             <img src="https://service.keyframe.vn/uploads/filecloud/2020/May/26/319-623041590476471-1590476471.jpg">
@@ -136,4 +139,5 @@
     </footer>
 
 </body>
+
 </html>
