--- a/members.html
+++ b/members.html
@@ -83,7 +83,7 @@
     </div>
 
     <div style="text-align: center; margin-bottom: 40px;">
-        <a href="index.html" class="btn-home">Quay lại Trang chủ</a>
+        <a href="menu.html" class="btn-home">Quay lại Trang chủ</a>
     </div>
 
     <footer class="footer-style">
@@ -92,3 +92,4 @@
 
 </body>
 </html>
+
