--- a/members.html
+++ b/members.html
@@ -76,7 +76,8 @@
                 <h3 class="member-name">Khánh Vy</h3>
                 <p class="role-tag">Thiết kế Đồ họa</p>
                 <p><b>Linh vật:</b> Con Mèo</p>
-                <p>Khéo léo và nghệ thuật, tạo nên bộ nhận diện thương hiệu tinh tế cho nhóm.</p>
+                <p>Bộ óc tư duy và sáng tạo vô hạn là một trong những khả năng vĩ đại nhất mà tôi tin là con người từng có được. Với khát vọng mang đến làn gió mới cho tầm nhìn mỹ thuật của Việt Nam và cả thế giới trong kỉ nguyên số, trong suốt hành trình làm nghề của mình, tôi luôn nỗ lực "hô biến" những đứa con tinh thần của mình ra hiện thực bằng tất cả đam mê, phong cách riêng cùng sức sáng tạo.
+"carpe diem - seize the day!" - nắm bắt lấy cơ hội để làm nên những điều vĩ đại</p>
             </div>
         </div>
 
@@ -92,4 +93,5 @@
 
 </body>
 </html>
+
 
