--- a/members.html
+++ b/members.html
@@ -25,14 +25,14 @@
         <!-- Thành viên 1 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="https://via.placeholder.com/120?text=Dat" class="avatar-img" alt="Dương Đạt">
+                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/DuongDatavatar.jpg?raw=true" class="avatar-img" alt="Dương Đạt">
                 <p class="mascot-icon">🐆</p>
             </div>
             <div class="info-box">
                 <h3 class="member-name">Dương Đạt</h3>
-                <p class="role-tag">Lập trình Web</p>
+                <p class="role-tag">Lập trình web </p>
                 <p><b>Linh vật:</b> Con Báo</p>
-                <p>Chuyên gia về mảng Front-end, sở hữu tốc độ xử lý logic nhanh như chớp. Chịu trách nhiệm chính trong việc xây dựng hệ thống cẩm nang Developer 2026.</p>
+                <p>Đi đầu xu hướng, kiến tạo công nghệ, lập trình viên không chỉ là những người kĩ sư sản xuất phần mềm, mà còn đóng vai trò quan trọng trong kỉ nguyên công nghệ số</p>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
         <!-- Thành viên 4 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="https://via.placeholder.com/120?text=Khanh+Vy" class="avatar-img" alt="Khánh Vy">
+                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/KhanhVyAvatar.jpg?raw=true" class="avatar-img" alt="Khánh Vy">
                 <p class="mascot-icon">🐱</p>
             </div>
             <div class="info-box">
@@ -93,5 +93,6 @@
 
 </body>
 </html>
+
 
 
