--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
 
                 <div class="intro-section">
                     <div class="intro-image">
-                        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJndXN3bm5qZzR4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/3o7TKVUn7iM8FMEU24/giphy.gif" alt="Học tập" style="width:100%; height:100%; object-fit:cover;">
+                        <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/7489378652841.gif?raw=true" alt="Học tập" style="width:100%; height:100%; object-fit:cover;">
                     </div>
                     <div>
                         <h2 style="color: #444; margin-top: 0;">Chào mừng bạn</h2>
@@ -147,3 +147,4 @@
 </body>
 
 </html>
+
