--- a/members.html
+++ b/members.html
@@ -32,7 +32,7 @@
                 <h3 class="member-name">Dương Đạt</h3>
                 <p class="role-tag">Lập trình web </p>
                 <p><b>Linh vật:</b> Con Báo</p>
-                <p>Đi đầu xu hướng, kiến tạo công nghệ, lập trình viên không chỉ là những người kĩ sư sản xuất phần mềm, mà còn đóng vai trò quan trọng trong kỉ nguyên công nghệ số</p>
+                <p> Với đam mê cháy bỏng và nhiệt huyết vô tận, tôi luôn khát khao được đồng hành cùng người dùng trong bất kì dự án xây dựng website dù lớn hay nhỏ.</p>
             </div>
         </div>
 
@@ -93,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
