--- a/menu.html
+++ b/menu.html
@@ -32,8 +32,11 @@
                 <h3 class="section-title">Tiện ích</h3>
                 <div class="minh-khai-box">
                     <p style="margin: 0 0 5px 0; font-size: 0.75em; color: #888;">Trường học liên kết</p>
-                    <a href="https://chuyenminhkhaist.edu.vn//" target="_blank">THPT Nguyễn Thị Minh Khai</a>
-                </div>
+                    <a href="https://chuyenminhkhaist.edu.vn//" target="_blank">THPT Chuyên Nguyễn Thị Minh Khai
+                    <div class="uni-logo"><img src="https://old.hcmus.edu.vn/images/2020/06/22/19.05.21---logo-don-02.png-chu-duoi-1.png" alt="VNU-HCM"></div>
+                            THPT Chuyên Nguyen Thi Minh Khai
+                    </div>
+            </a>
                 <a href="gamecuu.html" class="btn-side btn-game">Mini-game Trắc nghiệm</a>
                 <div class="subscribe-form">
                     <p>Đăng ký nhận tin mới:</p>
@@ -147,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
