--- a/menu.html
+++ b/menu.html
@@ -33,8 +33,8 @@
                 <div class="minh-khai-box">
                     <p style="margin: 0 0 5px 0; font-size: 0.75em; color: #888;">Trường học liên kết</p>
                     <a href="https://chuyenminhkhaist.edu.vn//" target="_blank">THPT Chuyên Nguyễn Thị Minh Khai
-                    <div class="uni-logo"><img src="https://old.hcmus.edu.vn/images/2020/06/22/19.05.21---logo-don-02.png-chu-duoi-1.png" alt="VNU-HCM"></div>
-                            THPT Chuyên Nguyen Thi Minh Khai
+                    <div class="uni-logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLJXYwhE3z8T3pJ0VSMH4d8-8qCRb9d0gbtw&s" alt="VNU-HCM"></div>
+                            
                     </div>
             </a>
                 <a href="gamecuu.html" class="btn-side btn-game">Mini-game Trắc nghiệm</a>
@@ -150,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
