--- a/members.html
+++ b/members.html
@@ -39,7 +39,7 @@
         <!-- Thành viên 2 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/Thaovyavatar.jpg?raw=true" class="avatar-img" alt="Thảo Vy">
+                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/Thaovyavatar(1).jpg?raw=true" alt="Thảo Vy">
                 <p class="mascot-icon">🐑</p>
             </div>
             <div class="info-box">
@@ -93,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
