--- a/members.html
+++ b/members.html
@@ -54,7 +54,7 @@
         <!-- Thành viên 3 -->
         <div class="member-card">
             <div class="avatar-box">
-                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/Tu%20Anh%20Avatar.jpg?raw=true" class="avatar-img" alt="Tú Anh">
+                <img src="https://github.com/congtydvva-oss/Trai-Can-Cuu-EDU/blob/main/Sn.jpg?raw=true" class="avatar-img" alt="Tú Anh">
                 <p class="mascot-icon">⭐</p>
             </div>
             <div class="info-box">
@@ -93,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
