--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,7 @@
                     </div>
                     <div>
                         <h2 style="color: #444; margin-top: 0;">Chào mừng bạn</h2>
-                        <p>Hệ thống hỗ trợ tìm kiếm thông tin về các trường đại học trọng điểm tại Việt Nam. Giúp bạn có cái nhìn tổng quan nhất.</p>
+                        <p>Bạn đang là học sinh cấp 3, người trẻ, phụ huynh đang loay hoay với những dự định sắp tới trên con đường sự nghiệp của mình và con em, không biết liệu nghề nghiệp nào phù hợp và mình có bền bỉ trước những thách thức đầy cam go trong thị trường lao động cạnh tranh gay gắt ngày nay hay không? Hãy để Trại Cần Cừu Education - hệ thống giáo dục tư vấn tuyển sinh hàng đầu Việt Nam giải đáp những thắc mắc cũng như đưa đến cho bạn cái nhìn gần hơn để việc hướng nghiệp không còn là một vấn đề nan giải✨️</p>
                         <p style="color: #ff9aa2; font-style: italic;">"Học vấn là chìa khóa mở cánh cửa tương lai."</p>
                     </div>
                 </div>
@@ -150,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
