--- a/members.html
+++ b/members.html
@@ -61,7 +61,7 @@
                 <h3 class="member-name">Tú Anh</h3>
                 <p class="role-tag">Kỹ xảo điện ảnh VFX</p>
                 <p><b>Linh vật:</b> Ngôi sao</p>
-                <p>Với khát khao sáng tạo không ngừng để tạo nên những khung hình kỹ xảo lung linh và sinh động phục vụ cho nghệ thuật và thương mại, tôi mong muốn cống hiến hết mình, đem lại nguồn kiến thức chất lượng, thực tế và chia sẻ hành trình 18 năm làm nghề đầy tâm huyết và nỗ lực. </p>
+                <p>Với khát khao sáng tạo không ngừng để tạo nên những khung hình kỹ xảo lung linh và sinh động phục vụ cho nghệ thuật và thương mại, tôi mong muốn cống hiến hết mình, đem lại nguồn kiến thức chất lượng, thực tế và chia sẻ hành trình nhiều năm làm nghề đầy tâm huyết và nỗ lực. </p>
                 <p> “Fake it till you make it - Giả lập sự tự tin, kích hoạt dòng sáng tạo." Hãy cứ rực rỡ như thể bạn đã thành công, rồi ý tưởng sẽ đuổi kịp niềm tin của chính bạn.</p>
             </div>
         </div>
@@ -93,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
