--- a/menu.html
+++ b/menu.html
@@ -87,7 +87,7 @@
                     <li class="uni-item">
                         <a href="https://hcmut.edu.vn//" target="_blank">
                             <div class="uni-logo"><img src="https://imgs.search.brave.com/qVwwlVx2NjRtwKzq_jshp3-HTgsDgYoAhXVPJe0tuJQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbmt5/dGh1YXRzby5jb20v/dXBsb2Fkcy90aHVt/Ym5haWxzLzgwMC8y/MDIxLzEwL2xvZ28t/YmFjaC1raG9hLXRw/aGNtLWlua3l0aHVh/dHNvLTAxLTIyLTEw/LTM5LTQ5LmpwZw" alt="VNU-HCM"></div>
-                            ĐHQG TP.HCM
+                            ĐH Bách Khoa TP.HCM
                         </a>
                     </li>
                 </ul>
@@ -150,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
