--- a/members.html
+++ b/members.html
@@ -15,7 +15,7 @@
                 <img src="https://scontent.fvca1-3.fna.fbcdn.net/v/t39.30808-6/621800187_1712308776395965_7247490065487986686_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rj3IHwu3Hi4Q7kNvwHy0mwi&_nc_oc=AdmOupWnM40qdRdXcnS_5gLT5aMSgHA0UWlue9PQvyNJbk7EsG7YtQxWAkNxggm5boo&_nc_zt=23&_nc_ht=scontent.fvca1-3.fna&_nc_gid=d1ba8QmTHoxrpj79A8nblg&oh=00_AfpZqaumrly5GOkCczgxDGNWOQz4x2kvhzR7tl2OXRfMPQ&oe=69812E67" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
             </a>
             </div>
-            <div class="brand-name"><span> Trai Can Cuu EDUCATION</span></div>
+            <div class="brand-name"><span> Trại Cần Cừu EDUCATION</span></div>
         </div>
     </header>
 
@@ -93,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
