--- a/menu.html
+++ b/menu.html
@@ -48,7 +48,7 @@
                 </div>
             </aside>
 
-            <!-- Cột giữa: Bây giờ chỉ còn Banner và Intro -->
+            <!-- Cột giữa -->
             <section class="content-center">
                 <div class="banner">
                     <h1>Khát Vọng Vươn Xa</h1>
@@ -94,7 +94,7 @@
             </aside>
         </div> <!-- KẾT THÚC main-layout chứa 3 cột -->
 
-        <!-- PHẦN NGÀNH HỌC: Đưa ra ngoài main-layout để nó tràn 100% main -->
+        <!-- PHẦN NGÀNH HỌC -->
         <div class="full-width-section">
             <h2 style="text-align: center; color: #444; margin-bottom: 20px;">Ngành học tiêu biểu</h2>
             <div class="grid-wrapper">
@@ -127,7 +127,7 @@
             <div class="footer-section">
                 <h4>ĐƠN VỊ ĐỒNG HÀNH</h4>
                 <p><b>Trường:</b> THPT Chuyên Nguyễn Thị Minh Khai</p>
-                <p><b>Địa chỉ:</b> 01 Nguyễn Chí Thanh, Phường 6, Sóc Trăng</p>
+                <p><b>Địa chỉ:</b> 01 Lý Thánh Tông, Phường Sóc Trăng, Thành Phố Cần Thơ</p>
                 <p><b>Nhà tài trợ:</b> Diệp Phước Bình</p>
                 <p><b>Liên Hệ:</b> <a href="https://www.facebook.com/thptchuyenntmk" target="_blank">Trung Học Phổ Thông Chuyên Nguyễn Thị Minh Khai</a></p>
             </div>
@@ -150,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
