--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -16,7 +16,7 @@
             <img src="https://scontent.fvca1-3.fna.fbcdn.net/v/t39.30808-6/621800187_1712308776395965_7247490065487986686_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rj3IHwu3Hi4Q7kNvwHy0mwi&_nc_oc=AdmOupWnM40qdRdXcnS_5gLT5aMSgHA0UWlue9PQvyNJbk7EsG7YtQxWAkNxggm5boo&_nc_zt=23&_nc_ht=scontent.fvca1-3.fna&_nc_gid=d1ba8QmTHoxrpj79A8nblg&oh=00_AfpZqaumrly5GOkCczgxDGNWOQz4x2kvhzR7tl2OXRfMPQ&oe=69812E67" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
         </a>
             </div>
-            <div class="brand-name">Trai<span>Can Cuu EDUCATION</span></div>
+            <div class="brand-name"><span> Trại Cần Cừu EDUCATION</span></div>
         </div>
         <ul class="nav-links">
             <li><a href="#intro">Định nghĩa</a></li>
@@ -46,11 +46,17 @@
         <section id="intro">
             <h2>1. Ngành Kỹ xảo điện ảnh (VFX) là gì?</h2>
             <p>Kỹ xảo điện ảnh (Visual Effects – VFX) là quá trình thiết kế, xây dựng và triển khai các hiệu ứng đặc biệt để tạo ra những hình ảnh không thể thực hiện bằng cách quay trực tiếp. Đây là sự kết hợp hoàn hảo giữa nghệ thuật sáng tạo và công nghệ máy tính hiện đại, đóng vai trò sống còn trong điện ảnh, quảng cáo và trò chơi điện tử.</p>
+       <div class="grid grid-cols-2 gap-2 text-sm">
+                        <span>• CGI (Computer-Generated Imagery)</span>
+                        <span>• Compositing (Ghép hình)</span>
+                        <span>• Motion Capture (Bắt chuyển động)</span>
+                        <span>• Matte Painting (Vẽ nền)</span>
+                    </div>
         </section>
 
     <section id="skills" class="py-20 bg-gray-100">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold mb-12 text-center text-primary section-title section-title-center uppercase">II. Yếu tố cần có của một VFX Artist</h2>
+            <h2>2.Yếu tố cần có của một VFX Artist</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-xl shadow-sm card-hover border-b-4 border-primary">
                     <h3 class="font-bold mb-3 text-lg">Thành thạo phần mềm</h3>
@@ -141,3 +147,4 @@
 </body>
 
 </html>
+
