--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -34,6 +34,7 @@
             <p><strong> Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
             <video src="VFX breakdown of the multiverse video  MANJESH VFX Edits - MANJESH VFX EDITs (720p, h264).mp4" width="640" height="360" controls>
   Trình duyệt của bạn không hỗ trợ thẻ video.
+        </div>
 </video>
 
     </section>
@@ -144,5 +145,6 @@
 </body>
 
 </html>
+
 
 
