--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -45,7 +45,8 @@
         <section id="intro">
             <h2>1. Ngành Kỹ xảo điện ảnh (VFX) là gì?</h2>
             <p>Kỹ xảo điện ảnh (Visual Effects – VFX) là quá trình thiết kế, xây dựng và triển khai các hiệu ứng đặc biệt để tạo ra những hình ảnh không thể thực hiện bằng cách quay trực tiếp. Đây là sự kết hợp hoàn hảo giữa nghệ thuật sáng tạo và công nghệ máy tính hiện đại, đóng vai trò sống còn trong điện ảnh, quảng cáo và trò chơi điện tử.</p>
-       <div class="grid grid-cols-2 gap-2 text-sm">
+            <p> Các kĩ thuật chính:</p>
+            <div class="grid grid-cols-2 gap-2 text-sm">
                         <span>• CGI (Computer-Generated Imagery)</span>
                         <span>• Compositing (Ghép hình)</span>
                         <span>• Motion Capture (Bắt chuyển động)</span>
@@ -146,6 +147,7 @@
 </body>
 
 </html>
+
 
 
 
