--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -27,7 +27,7 @@
         </ul>
     </header>
 
-   <section class="hero-custom">
+   <section class="hero-content">
         <div class="hero-text">
             <h1>SÁNG TẠO THẾ GIỚI KHÔNG TƯỞNG</h1>
             <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực. Từ những vụ nổ hoành tráng đến những sinh vật kỳ bí, bạn chính là người kiến tạo nên những trải nghiệm thị giác đỉnh cao.</p>
@@ -147,6 +147,7 @@
 </body>
 
 </html>
+
 
 
 
