--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -28,15 +28,17 @@
     </header>
 
    <section class="hero-content">
-        <div class="hero-text">
-            <h1>SÁNG TẠO THẾ GIỚI KHÔNG TƯỞNG</h1>
-            <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực. Từ những vụ nổ hoành tráng đến những sinh vật kỳ bí, bạn chính là người kiến tạo nên những trải nghiệm thị giác đỉnh cao.</p>
-            <p><strong> Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
-           <div class="hero-video">
-           <video src="VFX breakdown of the multiverse video  MANJESH VFX Edits - MANJESH VFX EDITs (720p, h264).mp4" width="640" height="360" controls>
-  Trình duyệt của bạn không hỗ trợ thẻ video.
-        </div>
-</video>
+    <div class="hero-text">
+        <h1>SÁNG TẠO THẾ GIỚI KHÔNG TƯỞNG</h1>
+        <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực...</p>
+        <p><strong> Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
+        
+        <div class="hero-video">
+            <video src="VFX-video.mp4" width="640" height="360" controls>
+                Trình duyệt của bạn không hỗ trợ thẻ video.
+            </video>
+        </div> </div>
+</section>
 
     </section>
 
@@ -147,6 +149,7 @@
 </body>
 
 </html>
+
 
 
 
