--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -33,11 +33,10 @@
         <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực...</p>
         <p><strong> Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
         
-        <div class="hero-video">
-            <video src="VFX-video.mp4" width="640" height="360" controls>
-                Trình duyệt của bạn không hỗ trợ thẻ video.
+    <div class="hero-video">
+        <video src="VFX-video.mp4" width="640" height="360" controls>Trình duyệt của bạn không hỗ trợ thẻ video.
             </video>
-        </div> </div>
+        </div>
 </section>
 
     </section>
@@ -149,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
