--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -30,7 +30,7 @@
    <section class="hero-content">
     <div class="hero-text">
         <h1>SÁNG TẠO THẾ GIỚI KHÔNG TƯỞNG</h1>
-        <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực...</p>
+        <p>Kỹ xảo điện ảnh (VFX) là nơi phép thuật trở thành hiện thực. Từ những vụ nổ hoành tráng đến những sinh vật kỳ bí, bạn chính là người kiến tạo nên những trải nghiệm thị giác đỉnh cao</p>
         <p><strong> Học VFX hôm nay – Chạm tay vào giấc mơ điện ảnh.</strong></p>
         
     <div class="hero-video">
@@ -148,6 +148,7 @@
 </body>
 
 </html>
+
 
 
 
