--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -53,15 +53,17 @@
                         <span>• Motion Capture (Bắt chuyển động)</span>
                         <span>• Matte Painting (Vẽ nền)</span>
                     </div>
+            <p>Đây là một ngành yêu cầu sự sáng tạo, chuyên môn kỹ thuật cao, luôn đổi mới để bắt kịp xu hướng công nghệ và là một lĩnh vực quan trọng trong ngành công nghiệp phim ảnh cũng như được ứng dụng rộng rãi trong các bộ phim bom tấn, quảng cáo, trò chơi điện tử và cả thực tế ảo (VR).
+</p>
         </section>
 
     <section id="skills" class="py-20 bg-gray-100">
         <div class="container mx-auto px-6">
-            <h2>2.Yếu tố cần có của một VFX Artist</h2>
+            <h2>2. Yếu tố cần có của một VFX Artist</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-xl shadow-sm card-hover border-b-4 border-primary">
                     <h3 class="font-bold mb-3 text-lg">Thành thạo phần mềm</h3>
-                    <p class="text-gray-500 text-sm">Sử dụng tốt Adobe After Effects, Autodesk Maya, Houdini, Blender, Cinema 4D.</p>
+                    <p class="text-gray-500 text-sm">Một số phần mềm phổ biến trong ngành gồm có Adobe After Effects, Autodesk Maya, Houdini, Blender, Cinema 4D.</p>
                 </div>
                 <div class="bg-white p-8 rounded-xl shadow-sm card-hover border-b-4 border-primary">
                     <h3 class="font-bold mb-3 text-lg">3D & Animation</h3>
@@ -72,8 +74,8 @@
                     <p class="text-gray-500 text-sm">Óc quan sát tinh tế giúp tái tạo thế giới thực chính xác và cuốn hút</p>
                 </div>
                 <div class="bg-white p-8 rounded-xl shadow-sm card-hover border-b-4 border-primary">
-                    <h3 class="font-bold mb-3 text-lg">Kiến thức Vật lý</h3>
-                    <p class="text-gray-500 text-sm">Hiểu biết về ánh sáng, màu sắc và vật lý để hiệu ứng chân thực</p>
+                    <h3 class="font-bold mb-3 text-lg">Hiểu biết về ánh sáng, màu sắc và vật lý</h3>
+                    <p class="text-gray-500 text-sm">Giúp các hiệu ứng chân thực và hòa hợp với cảnh quay thật.</p>
                 </div>
                 <div class="bg-white p-8 rounded-xl shadow-sm card-hover border-b-4 border-primary">
                     <h3 class="font-bold mb-3 text-lg">Kỹ thuật Compositing</h3>
@@ -148,6 +150,7 @@
 </body>
 
 </html>
+
 
 
 
