--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -87,12 +87,14 @@
                 </div>
             </div>
         </div>
-    </section>
-
+    
         <section id="edu">
             <h2>3. Chương trình đào tạo & Cơ sở uy tín</h2>
-            <p><strong>Môn học tiêu biểu:</strong> Compositing, Matte Painting, Lighting & Rendering, 3D Color.</p>
-            <div class="uni-grid">
+            <p><strong>Trong các năm đầu của ngành, bạn sẽ được học các môn đại cương như kỹ thuật vẽ, lý thuyết màu sắc và nguyên lý thiết kế với các môn học tiêu biểu:</strong> Compositing, Modeling/ Concept Development for Visual Effects, Lighting & Rendering, 3D Color.</p>
+            <a href="https://www.youtube.com/watch?v=Fu7_Scyge6Q" class="reference-link">
+            Tham khảo thêm tại đây
+            </a>
+            <div class="uni-grid"> 
                 <a href="https://skda.edu.vn/" target="_blank" class="uni-link">
                     <div class="uni-card"><span class="uni-icon">🎬</span><p>ĐH Sân khấu Điện ảnh</p></div>
                 </a>
@@ -150,6 +152,7 @@
 </body>
 
 </html>
+
 
 
 
