--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -120,15 +120,14 @@
                 <div class="card" style="background: var(--mint);">
                     <h3>Vị trí phổ biến</h3>
                     <ul>
-                        <li>3D Modeler: Tạo mô hình vật thể 3D.</li>
-                        <li>Compositor: Ghép các lớp hình ảnh.</li>
-                        <li>FX Artist: Tạo hiệu ứng cháy nổ, nước.</li>
-                        <li>VFX Supervisor: Giám sát sản xuất.</li>
+                        <li>3D Modeler: Chuyên tạo ra các mô hình 3D phục vụ cho các công ty, studio phim ảnh, trò chơi điện tử và quảng cáo.</li>
+                        <li>Compositor: Chịu trách nhiệm ghép hình ảnh thực tế với các hiệu ứng VFX để tạo ra một cảnh quay hoàn chỉnh đặc biệt là trong lĩnh vực phim điện ảnh, quảng cáo (TVC) và MV ca nhạc.</li>
+                        <li>Motion Graphics Artist: Tạo ra các hiệu ứng đồ họa chuyển động cho phim, quảng cáo, truyền hình với cơ hội việc làm rất đa dạng, từ các studio chuyên biệt về kỹ thuật chuyển động cho đến các tập đoàn truyền thông đa quốc gia</li>
+                        <li>FX Artist: Chuyên tạo ra các hiệu ứng như cháy nổ, sương mù, nước, gió…đang phát triển cực kỳ mạnh mẽ tại Việt Nam và trên thế giới nhờ sự bùng nổ của nội dung streaming (Netflix, Disney+), phim điện ảnh và game AAA</li>
+                        <li>Technical Director (TD): Hỗ trợ kỹ thuật và tối ưu hóa quy trình làm việc, giúp các nghệ sĩ VFX đạt hiệu suất cao nhất trong các lĩnh vực game, Điện ảnh/VFX, hay Công nghệ phần mềm</li>
+                        <li>VFX Supervisor: Người giám sát toàn bộ quá trình sản xuất VFX, làm việc trực tiếp với đạo diễn để đảm bảo chất lượng hình ảnh đạt tiêu chuẩn. Cơ hội làm việc đa dạng từ phim ảnh, quảng cáo, trò chơi điện tử , video âm nhạc và thực tế ảo VR</li>
+
                     </ul>
-                </div>
-                <div class="card" style="background: var(--pink);">
-                    <h3>Nơi làm việc</h3>
-                    <p>Các Studio lớn trong và ngoài nước, phục vụ phim điện ảnh, MV ca nhạc và quảng cáo chuyên nghiệp.</p>
                 </div>
             </div>
         </section>
@@ -152,6 +151,7 @@
 </body>
 
 </html>
+
 
 
 
