--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -137,6 +137,12 @@
             <p><strong>1. Không biết vẽ tay có làm VFX được không?</strong> Có, vẽ tay là lợi thế nhưng tư duy không gian và thành thạo phần mềm là quan trọng nhất.</p>
             <p><strong>2. Ngành này có bị AI thay thế không?</strong> AI hỗ trợ xử lý kỹ thuật nhanh hơn, nhưng ý tưởng sáng tạo và đạo diễn hình ảnh vẫn cần con người.</p>
             <p><strong>3. Cần học bao lâu để đi làm?</strong> Tùy vào lộ trình, thường từ 2-4 năm để nắm vững các kỹ thuật chuyên sâu.</p>
+        <div class="uni-grid"> 
+                <a href="https://www.hotcourses.vn/study-abroad-info/careers-prospects/nganh-ki-xao-dien-anh-vfx-ban-da-biet-gi/" target="_blank" class="uni-link">
+                    <div <p>Website tham khảo I</p></div>
+                </a>
+                <a href="https://mastermedia.vn/resources/tat-tan-tat-ve-nganh-ky-xao-dien-anh-co-hoi-nghe-nghiep-va-muc-luong/" target="_blank" class="uni-link">
+                    <div <p>Website tham khảo II</p></div>
         </section>
     </div>
 
@@ -151,6 +157,7 @@
 </body>
 
 </html>
+
 
 
 
