--- a/TuAnhtab.html
+++ b/TuAnhtab.html
@@ -139,10 +139,10 @@
             <p><strong>3. Cần học bao lâu để đi làm?</strong> Tùy vào lộ trình, thường từ 2-4 năm để nắm vững các kỹ thuật chuyên sâu.</p>
         <div class="uni-grid"> 
                 <a href="https://www.hotcourses.vn/study-abroad-info/careers-prospects/nganh-ki-xao-dien-anh-vfx-ban-da-biet-gi/" target="_blank" class="uni-link">
-                    <div <p>Website tham khảo I</p></div>
+                    <div <p><strong>Website tham khảo I</strong></p></div>
                 </a>
                 <a href="https://mastermedia.vn/resources/tat-tan-tat-ve-nganh-ky-xao-dien-anh-co-hoi-nghe-nghiep-va-muc-luong/" target="_blank" class="uni-link">
-                    <div <p>Website tham khảo II</p></div>
+                    <div <p><strong>Website tham khảo II</strong></p></div>
         </section>
     </div>
 
@@ -157,6 +157,7 @@
 </body>
 
 </html>
+
 
 
 
