--- a/Thaovytab.html
+++ b/Thaovytab.html
@@ -6,17 +6,26 @@
     <title>Tư vấn nghề Chuyên viên Thiết kế Truyền thông Đa phương tiện</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styleddtest.css">
+    <style>
+        /* Style bổ sung cho các phần mới để khớp với thiết kế của bạn */
+        .roadmap-container { border-left: 3px dashed var(--orange-main); margin: 20px 0 20px 20px; padding-left: 20px; }
+        .roadmap-step { margin-bottom: 20px; position: relative; }
+        .roadmap-step::before { content: '●'; position: absolute; left: -27px; color: var(--orange-main); font-size: 20px; }
+        .faq-item { background: #fff; border: 1px solid #eee; padding: 15px; border-radius: 8px; margin-bottom: 10px; }
+        .faq-question { font-weight: bold; color: #E85D04; cursor: pointer; margin-bottom: 5px; display: block;}
+        .tool-category { font-weight: bold; color: #2D3436; margin-top: 10px; display: block; border-bottom: 1px solid #ddd; }
+    </style>
 </head>
 <body>
 
     <header>
         <div class="logo-area">
             <div class="brand-logo">
-                <a href =" menu.html">
-                <img src="https://scontent.fvca1-3.fna.fbcdn.net/v/t39.30808-6/621800187_1712308776395965_7247490065487986686_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rj3IHwu3Hi4Q7kNvwHy0mwi&_nc_oc=AdmOupWnM40qdRdXcnS_5gLT5aMSgHA0UWlue9PQvyNJbk7EsG7YtQxWAkNxggm5boo&_nc_zt=23&_nc_ht=scontent.fvca1-3.fna&_nc_gid=d1ba8QmTHoxrpj79A8nblg&oh=00_AfpZqaumrly5GOkCczgxDGNWOQz4x2kvhzR7tl2OXRfMPQ&oe=69812E67" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
-            </a>
+                <a href="menu.html">
+                    <img src="https://scontent.fvca1-3.fna.fbcdn.net/v/t39.30808-6/621800187_1712308776395965_7247490065487986686_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=rj3IHwu3Hi4Q7kNvwHy0mwi&_nc_oc=AdmOupWnM40qdRdXcnS_5gLT5aMSgHA0UWlue9PQvyNJbk7EsG7YtQxWAkNxggm5boo&_nc_zt=23&_nc_ht=scontent.fvca1-3.fna&_nc_gid=d1ba8QmTHoxrpj79A8nblg&oh=00_AfpZqaumrly5GOkCczgxDGNWOQz4x2kvhzR7tl2OXRfMPQ&oe=69812E67" alt="Logo" style="width: 100%; height: 100%; object-fit: cover;">
+                </a>
             </div>
-            <div class="brand-name"><span> Trại Cần Cừu EDUCATION</span></div>
+            <div class="brand-name">Trai<span>Can Cuu EDUCATION</span></div>
         </div>
         <ul class="nav-links">
             <li><a href="#intro">Định nghĩa</a></li>
@@ -44,7 +53,7 @@
             <h2>1. Thiết kế Truyền thông Đa phương tiện là gì?</h2>
             <p> <a href="https://youtu.be/PitjTtiiZWQ?si=humB8n1ADJs1ilNT" target="_blank" style="color: var(--orange-main); font-weight: bold;">
                 Ngành thiết kế đa phương tiện 
-               </a> là lĩnh vực kết hợp giữa mỹ thuật, công nghệ và truyền thông nhằm tạo ra các sản phẩm truyền thông trực quan, sinh động và có tính tương tác cao. Ngành này sử dụng nhiều loại hình phương tiện khác nhau như hình ảnh, đồ họa, video, âm thanh, hoạt hình, giao diện số… để truyền tải thông điệp một cách hiệu quả đến công chúng mục tiêu. 
+                </a> là lĩnh vực kết hợp giữa mỹ thuật, công nghệ và truyền thông nhằm tạo ra các sản phẩm truyền thông trực quan, sinh động và có tính tương tác cao. Ngành này sử dụng nhiều loại hình phương tiện khác nhau như hình ảnh, đồ họa, video, âm thanh, hoạt hình, giao diện số… để truyền tải thông điệp một cách hiệu quả đến công chúng mục tiêu. 
             </p>
 
             <div class="grid-box">
@@ -89,8 +98,26 @@
             </div>
         </section>
 
+        <section id="tools">
+            <h2>3. Công cụ đắc lực cho Designer</h2>
+            <div class="grid-box">
+                <div class="card" style="background: #F8FBFF;">
+                    <span class="tool-category">🎨 Hình ảnh & Layout:</span>
+                    <p>Adobe Photoshop, Illustrator, InDesign, Canva.</p>
+                    <span class="tool-category">🎬 Video & VFX:</span>
+                    <p>Premiere Pro, After Effects, CapCut PC.</p>
+                </div>
+                <div class="card" style="background: #F8FBFF;">
+                    <span class="tool-category">📱 Giao diện & Web:</span>
+                    <p>Figma, Adobe XD, Framer.</p>
+                    <span class="tool-category">🤖 Trí tuệ nhân tạo (AI):</span>
+                    <p>Midjourney, Firefly, Leonardo.ai.</p>
+                </div>
+            </div>
+        </section>
+
         <section id="skills">
-            <h2>3. Phẩm chất cần có</h2>
+            <h2>4. Phẩm chất cần có</h2>
             <div class="grid-box">
                 <div class="card" style="background: #FFF9F0;">
                     <p>✨ Tư duy sáng tạo & gu thẩm mỹ tốt.</p>
@@ -106,7 +133,7 @@
         </section>
 
         <section id="edu">
-            <h2>4. Học gì để làm nghề? Học ở đâu để phát triển?</h2>
+            <h2>5. Học gì để làm nghề? Học ở đâu để phát triển?</h2>
             <div style="display: flex; align-items: flex-start; gap: 30px; flex-wrap: wrap;">
                 <div style="flex: 1; min-width: 300px;">
                     <h3 style="margin-bottom: 15px;">Khối xét tuyển phổ biến:</h3>
@@ -133,19 +160,37 @@
             <h3 style="margin-top: 40px;">Đại học đào tạo uy tín:</h3>
             <div class="grid-box">
                 <div class="card" style="background-color: #F8FBFF;">
-            <strong>Miền Bắc:</strong> <a href="https://ajc.edu.vn/" target="_vd1"> Học viện Báo chí </a>, <a href="https://uad.edu.vn/" target="_vd1"> ĐH Mỹ thuật Công nghiệp</a>, <a href="https://daihoc.fpt.edu.vn/" target="_vd1"> FPT</a>
-        </div>
-        <div class="card" style="background-color: #F8FBFF;">
-            <strong>Miền Trung:</strong> <a href="https://duytan.edu.vn/" target="_vd1"> ĐH Duy Tân </a>, <a href="https://upt.edu.vn/" target="_vd1"> ĐH Phan Thiết</a>, <a href="https://huis.edu.vn/" target="_vd1"> Khoa Quốc tế - ĐH Huế</a>
-        </div>
-        <div class="card" style="background-color: #F8FBFF;">
-            <strong>Miền Nam:</strong> <a href="https://www.rmit.edu.vn/" target="_vd1"> ĐH RMIT Việt Nam </a>, <a href="https://hcmussh.edu.vn/" target="_vd1"> ĐH KHXH&NV – ĐHQG TP.HCM</a>, <a href="https://www.vlu.edu.vn/" target="_vd1"> ĐH Văn Lang</a>
-        </div>
-    </div>
+                    <strong>Miền Bắc:</strong> <a href="https://ajc.edu.vn/" target="_vd1"> Học viện Báo chí </a>, <a href="https://uad.edu.vn/" target="_vd1"> ĐH Mỹ thuật Công nghiệp</a>, <a href="https://daihoc.fpt.edu.vn/" target="_vd1"> FPT</a>
+                </div>
+                <div class="card" style="background-color: #F8FBFF;">
+                    <strong>Miền Trung:</strong> <a href="https://duytan.edu.vn/" target="_vd1"> ĐH Duy Tân </a>, <a href="https://upt.edu.vn/" target="_vd1"> ĐH Phan Thiết</a>, <a href="https://huis.edu.vn/" target="_vd1"> Khoa Quốc tế - ĐH Huế</a>
+                </div>
+                <div class="card" style="background-color: #F8FBFF;">
+                    <strong>Miền Nam:</strong> <a href="https://www.rmit.edu.vn/" target="_vd1"> ĐH RMIT Việt Nam </a>, <a href="https://hcmussh.edu.vn/" target="_vd1"> ĐH KHXH&NV – ĐHQG TP.HCM</a>, <a href="https://www.vlu.edu.vn/" target="_vd1"> ĐH Văn Lang</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="roadmap">
+            <h2>6. Lộ trình phát triển sự nghiệp</h2>
+            <div class="roadmap-container">
+                <div class="roadmap-step">
+                    <strong>Giai đoạn 1: Sinh viên & Thực tập (Intern)</strong>
+                    <p>Học công cụ, rèn luyện tư duy thiết kế và làm Portfolio cá nhân.</p>
+                </div>
+                <div class="roadmap-step">
+                    <strong>Giai đoạn 2: Chuyên viên chính thức (Junior/Senior)</strong>
+                    <p>Làm việc tại Agency hoặc Client, xử lý các chiến dịch truyền thông lớn.</p>
+                </div>
+                <div class="roadmap-step">
+                    <strong>Giai đoạn 3: Quản lý sáng tạo (Art Director / Creative Director)</strong>
+                    <p>Dẫn dắt đội ngũ, chịu trách nhiệm về phong cách nghệ thuật cho cả dự án.</p>
+                </div>
+            </div>
         </section>
 
         <section id="career-opportunities">
-            <h2>5. Cơ hội nghề nghiệp & Môi trường làm việc</h2>
+            <h2>7. Cơ hội nghề nghiệp & Môi trường làm việc</h2>
             <div class="grid-box">
                 <div class="card" style="border-top: 5px solid var(--orange-main);">
                     <h3>Vị trí việc làm</h3>
@@ -175,18 +220,18 @@
         </section>
 
         <section id="salary">
-            <h2>6. Thu nhập bình quân</h2>
+            <h2>8. Thu nhập bình quân</h2>
             <table>
                 <tr><th>Vị trí / Kinh nghiệm</th><th>Mức lương (VNĐ)</th></tr>
                 <tr><td>Mới tốt nghiệp (1–2 năm)</td><td>7 – 12 triệu/tháng</td></tr>
                 <tr><td>Chuyên viên (2–3 năm)</td><td>10 – 20 triệu/tháng</td></tr>
                 <tr><td>UI/UX Designer</td><td>12 – 30 triệu/tháng</td></tr>
-                <tr><td>Trưởng nhóm / Art Director</td><td>15 – 30 triệu/tháng++</td></tr>
+                <tr><td>Trưởng nhóm / Art Director</td><td>15 – 35 triệu/tháng++</td></tr>
             </table>
         </section>
 
         <section id="career">
-            <h2>7. Cơ hội & Thách thức</h2>
+            <h2>9. Cơ hội & Thách thức</h2>
             <div class="grid-box">
                 <div class="card" style="border-left: 5px solid #27ae60;">
                     <h3 style="color: #27ae60;">Cơ hội</h3>
@@ -196,6 +241,18 @@
                     <h3 style="color: #e74c3c;">Thách thức</h3>
                     <p>Áp lực sáng tạo không ngừng, công nghệ thay đổi nhanh, cạnh tranh cao và deadline dày đặc.</p>
                 </div>
+            </div>
+        </section>
+
+        <section id="faq">
+            <h2>10. Giải đáp thắc mắc (FAQ)</h2>
+            <div class="faq-item">
+                <strong class="faq-question">? Không biết vẽ tay có học được không?</strong>
+                <p>Hoàn toàn được! Công cụ máy tính và tư duy thẩm mỹ là yếu tố quan trọng nhất trong ngành này.</p>
+            </div>
+            <div class="faq-item">
+                <strong class="faq-question">? Học ngành này có cần máy tính cấu hình mạnh?</strong>
+                <p>Có, vì các phần mềm đồ họa và dựng phim yêu cầu RAM và Card đồ họa khá cao để làm việc mượt mà.</p>
             </div>
         </section>
     </div>
@@ -208,5 +265,4 @@
         </div>
     </footer>
 </body>
-
 </html>
